--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "jquery": "^3.6.4",
     "mini-css-extract-plugin": "^2.5.3",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.7",
     "sass-loader": "^12.4.0",
     "webpack": "^5.68.0"
